git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1118926 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,7 +5,7 @@ ChangeLog for ARQ
 
 + Upgrade to Lucene 2.3.1
 
-+ Change return type of ResultFactor.copyresult to ResultSetRewinable (a sub interface of ResultSet).
++ Change return type of ResultFactor.copyResults to ResultSetRewinable (a sub interface of ResultSet).
 
 + Allow inital bindings for Updates (ignored unless a Modify operation)
 
