git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1118969 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -30,6 +30,8 @@ See ToDoSSE
 + EXISTS { pattern }
 + ORDER BY aggregate
 
++ Wrapper to have all functions as assignments
+
 + Extend optimization environment - sort out nested with outer variable case.
    test case?  is this fixed now without heavy weight tracking?
    --> Transform support to track variable scopes.
