--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,9 @@ Documentation:
 
 SDB v1.1
 ========
+
++ SPARQL/Update support 
+
 + Jar upgrades: 
     commons-logging-1.1.1
     new versions ARQ and Jena jars (no name changes).
@@ -15,14 +18,17 @@ SDB v1.1
 + MySQL : Node table schema changed to be LONGTEXT.  In v1.0 literals longer than 64K caused errors.
   Old databases layouts continue to work.  Ideally, reformat and reload. 
     
-+ The named graph indexing has been improved - old databases still work but ideally
-  should be reindexed.
+**** The named graph indexing has been improved ****
+  Old databases still work but ideally should be reindexed.
+  
   Migration: drop indexes with SBD 1.0 tools, create indexes with SDB 1.1 tools
   Manaual deletion of all secondary indexes via DB admin tools also will work 
 
 + Assembler structures clarified.  [document on wiki]
 
 + SQL code generation made more regular.
+
++ H2 support
 
 SDB v1.0
 ========
