git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119053 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,9 @@ ChangeLog for ARQ
 
 ==== ARQ 2.3
 
++ HAVING / ORDER BY variable, where variable is SELECT as an aggregate or computed value now works. 
+  (current restriction: can't have the expression directly in the ORDER BY - need to project the variable)  
+
 + Upgrade to Lucene 2.3.1
 
 + Change return type of ResultFactor.copyResults to ResultSetRewinable (a sub interface of ResultSet).
