git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119054 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -28,6 +28,7 @@ See ToDoSSE
 + ORDER BY COUNT(*)
   i.e. add to the assignments.
   c.f SELECT
+  AlgebraGenerator/compileModifiers(Query, Op)
 
 + Extend optimization environment - sort out nested with outer variable case.
    test case?  is this fixed now without heavy weight tracking?
