git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119292 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,7 @@
 ==== ARQ ToDo
 
+** Stricter rules for property functions - must bind al variables => can do FILTER migration across them.
+
 ** Clearer ways to add BGP solver mechanisms - invert Stage/StageList 
 
 ++ ** Document "stages" - new form.
