git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119299 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -1,6 +1,6 @@
 ==== ARQ ToDo
 
-** Stricter rules for property functions - must bind al variables => can do FILTER migration across them.
+** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
 ** Clearer ways to add BGP solver mechanisms - invert Stage/StageList 
 
@@ -18,6 +18,8 @@
 See ToDoSSE
 
 ----
+++ ModSymbol - prefixes and namespaces
+
 ++ SPARQL/Update : ADD/REMOVE
    Model/Resource wrapper on update API
 
