git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119323 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,8 @@
 ChangeLog for ARQ
 =================
 
+==== ARQ 2.4
+
 ==== ARQ 2.3
 
 + HAVING / ORDER BY variable, where variable is SELECT as an aggregate or computed value now works. 
