--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -6,8 +6,9 @@ Homepage:
 Documentation:
     http://jena.hpl.hp.com/wiki/SDB
 
-SDB v1.1
-========
+==== SDB v1.2
+
+==== SDB v1.1
 
 + SPARQL/Update support 
 
@@ -32,42 +33,9 @@ SDB v1.1
 
 + removeAll() fastpath added
 
-SDB v1.0
-========
+==== SDB v1.0
 
 + DB2 support
 + Fix: Transaction handling
 + More testing
 
-SDB Beta 2
-==========
-
-+ Joseki integration - example joseki-config-sdb.ttl in Joseki CVS.
-  Requires post-3.1 version of Joseki for jar upgrades.
-+ Command tidy up; wider use of --time.
-+ Settable SQL fetchSize : context setting SDB.jdbcFetchSize. 
-
-SDB Beta 1
-==========
-
-+ Support for named graphs.
-  In order to use named graphs, SDB stores must be reformatted and reloaded.
-  SDB-alpha stores and queries should continue to work but rebuilding
-  the store is recommended. 
-
-Databases supported in this release:
-+ Oracle 10gR2, Microsoft SQL Server 2005, PostgreSQL 8.2,
-  MySQL 5.0 , Apache Derby 10.2, HSQLDB 1.8.
-  Please report earlier versions that pass the test suite.
-
-+ Database schema change for Microsoft SQL Server for new databases to
-  allow full internationalization support.  Old databases continue to work.
-  Reformatting and reloading data recommended.
-
-
-SDB Alpha 2
-===========
-
-The namespace for store description assembler files is
-now <http://jena.hpl.hp.com/2007/sdb#>.  This is a change from
-alpha-1.
