git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119344 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -8,7 +8,9 @@ See ToDoSSE
 + extra jar - testing only.
 
 + Stages
-	invert Stage/StageList 
+	invert Stage/StageList
+	Formalse the TDB stackign generator  approach.
+	  Or even register stage facctories wiht accept/create 
 	ARQ documentation - stages and adding new storage layers.
 	
 +  FROM <.....n3>
