git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119373 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,7 @@
 ==== ARQ ToDo
 
+** Integrate paths
+
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
 See ToDoSSE
