git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119386 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -2,6 +2,7 @@
 
 ** Integrate paths [In Progress]
    need "reverse paths" ^ in N3.<uri>
+** Path tests
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
