--- a/ToDo
+++ b/ToDo
@@ -3,6 +3,12 @@
 ** Integrate paths [In Progress]
 ** Path tests / scripted.
 
+1/ Rewire parser to generate ElementPathBlock (ARQ)
+2/ OpPath (partial)
+3/ OpStage ==> OpSeq
+4/ (ref) SimpleEvaluator OpPath [Sequencing]
+5/ (main)CompilerDispatch OpPath
+
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
 See ToDoSSE
