--- a/ToDo
+++ b/ToDo
@@ -7,7 +7,7 @@
 2/ OpPath (partial)
 3/ OpStage ==> OpSeq
 4/ (ref) SimpleEvaluator OpPath [Sequencing]
-5/ (main)CompilerDispatch OpPath
+5/ (main) OpCompiler OpPath
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
