git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119409 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -1,13 +1,12 @@
 ==== ARQ ToDo
 
-** Integrate paths [In Progress]
-** Path tests / scripted.
-
+** Paths 
 1/ Rewire parser to generate ElementPathBlock (ARQ)
 2/ OpPath (partial)
 3/ OpStage ==> OpSeq
 4/ (ref) SimpleEvaluator OpPath [Sequencing]
 5/ (main) OpCompiler OpPath
+0/ Path tests (scripted)
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
