git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119410 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -6,6 +6,7 @@
 3/ OpStage ==> OpSeq
 4/ (ref) SimpleEvaluator OpPath [Sequencing]
 5/ (main) OpCompiler OpPath
+6/ BFI allnodes evaluation of a path.
 0/ Path tests (scripted)
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
