--- a/ToDo
+++ b/ToDo
@@ -4,9 +4,8 @@
 1/ Rewire parser to generate ElementPathBlock (ARQ)
 2/ OpPath (partial)
 3/ OpStage ==> OpSeq
-4/ (ref) SimpleEvaluator OpPath [Sequencing]
-5/ (main) OpCompiler OpPath
-6/ BFI allnodes evaluation of a path.
+4/ QueryIterPath and PathLib.execTriplePath
+5/ BFI allnodes evaluation of a path.
 0/ Path tests (scripted)
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
