git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119413 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -2,11 +2,11 @@
 
 ** Paths 
 1/ Rewire parser to generate ElementPathBlock (ARQ)
-2/ OpPath (partial)
 3/ OpStage ==> OpSeq
-4/ QueryIterPath and PathLib.execTriplePath
 5/ BFI allnodes evaluation of a path.
 0/ Path tests (scripted)
+9/ Test reverse evaluation from object
+
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
