--- a/ToDo
+++ b/ToDo
@@ -4,7 +4,8 @@
 1/ Rewire parser to generate ElementPathBlock (ARQ)
 3/ OpStage ==> OpSeq
 5/ BFI allnodes evaluation of a path.
-0/ Path tests (scripted)
+0/ Path tests (scripted) inc from Object
+1/ TestPath - API usage.
 9/ Test reverse evaluation from object
 
 
