--- a/ToDo
+++ b/ToDo
@@ -1,9 +1,11 @@
 ==== ARQ ToDo
 
 ** Paths 
-1/ Rewire parser to generate ElementPathBlock (ARQ) [DONE 0.75]
+/ Check how plain triples are processed.
+    ElementPathBlock to have triples and paths
+    ParserBase to break apart top level P_Link
+
 3/ OpStage ==> OpSeq
-5/ BFI allnodes evaluation of a path. [**]
 0/ Path tests (scripted) inc from Object
 1/ TestPath - API usage.
 9/ Test reverse evaluation from object
