git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119436 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -4,6 +4,8 @@
 
 + Precedence-driven printing PathWriter.
 
++ Quad engine. Does this work at all at the parse/op level?
+
 + OpStage ==> OpSeq
 
 + Path tests (scripted) inc from Object
