git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119438 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -3,13 +3,9 @@
 ** Paths 
 
 + Precedence-driven printing PathWriter.
-
-+ Quad engine. Does this work at all at the parse/op level?
-
++ Quad engine from qparse
 + OpStage ==> OpSeq
-
 + Path tests (scripted) inc from Object
-+ Ref engine and paths
 
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
