git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119444 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -4,9 +4,8 @@
 
 + Precedence-driven printing PathWriter.
 + Quad engine from qparse
-+ OpStage ==> OpSeq
-+ Path tests (scripted) inc from Object
-+ JoinClassification involving OpSeq
++ Path tests (scripted) inc from Object : testing/ARQ/Paths/
++ Check: JoinClassification involving OpSeq
 ** Stricter rules for property functions - must bind all variables => can do FILTER migration across them.
 
 See ToDoSSE
