git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119447 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -2,6 +2,8 @@
 
 ** Paths 
 
++ ** Path tests (scripted) inc from Object : testing/ARQ/Paths/
+
 + Precedence-driven printing PathWriter.
 
 [DONE/checked]
