git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119449 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -3,6 +3,7 @@
 ** Paths 
 
 + ** Path tests (scripted) inc from Object : testing/ARQ/Paths/
++ ** Path and aggregation in same query.
 + ** Path syntax tests (scripted)
 
 + Precedence-driven printing PathWriter.
