git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119456 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -2,6 +2,9 @@
 
 ** Paths 
 
+    // Move PathBlock.reduce to AlgebraCompiler and have a per-transaction scoped var generator 
+
++ {0} to be an assignment? 
 + ** Path and aggregation in same query.
 + ** Path syntax tests (scripted)
 
