--- a/ToDo
+++ b/ToDo
@@ -13,16 +13,20 @@
 See ToDoSSE
 
 ----
++ Do more at algebra level:
+  Reorg to be a algebra -> algebra rewrite.
+  OpFilter/OpBGP done as a rewrite to OpSequence/OpFilter/OpBGp
+  Direct (flow based) execution in main - remove the FilterPlacement and BGP optimizer to an optimize step. 
+
++ Stages and FilterPlacement.
+	invert Stage/StageList
+	Formalse the TDB stacking generator approach.
+	  Or even register stage facctories with accept/create 
+	
 + extra jar - testing only.
 
 + Parser context (to put var allocation things in)
 
-+ Stages
-	invert Stage/StageList
-	Formalse the TDB stackign generator  approach.
-	  Or even register stage facctories wiht accept/create 
-	ARQ documentation - stages and adding new storage layers.
-	
 +  FROM <.....n3>
    but it's application/rdf+xml
    believe MIME type.
