git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119492 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -15,7 +15,8 @@ See ToDoSSE
 ----
 + Do more at algebra level:
   Reorg to be a algebra -> algebra rewrite.
-  OpFilter/OpBGP done as a rewrite to OpSequence/OpFilter/OpBGp
+  OpFilter/OpBGP done as a rewrite to OpSequence/OpFilter/OpBGp [IN PROGRESS]
+
   Direct (flow based) execution in main - remove the FilterPlacement and BGP optimizer to an optimize step. 
 
 + Stages and FilterPlacement.
