git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119537 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -14,6 +14,8 @@ See ToDoSSE
 
 ----
 
++ Prefixes for a query from a model.
+
 + extra jar - testing only.
 
 + Parser context (to put var allocation things in)
