git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119677 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,8 @@ ChangeLog for ARQ
 
 ==== ARQ 2.4
 
++ Change to interface for query compilation : Algebra.compile and Algebra.optimize 
+
 + Property paths added.  See documentation.
   
 + Simplify the interface between ARQ and data sources.
