Modified rule loading (esp. @include) to allow FIleManager redirects.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113552 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -7,6 +7,9 @@ Typed literals:
       zeros by canonicalizing values after parsing and improving
       canonicalization.
       
+Reasoners:
+    o Modified @include processing to support FileManager redirects.
+          
 ==== Jena 2.5.5
 
 Jar changes:
