Fixed problem with LPTopGoalIterator looking ahead one extra step than it needed to.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113553 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -8,8 +8,11 @@ Typed literals:
       canonicalization.
       
 Reasoners:
-    o Modified @include processing to support FileManager redirects.
-          
+    o Modified @include processing and Rule.rulesFromURL to support 
+      FileManager redirects.
+    o Fixed problem withLPTopGoalIterator which caused one extra level
+      of lookahead in some circumstances.
+    
 ==== Jena 2.5.5
 
 Jar changes:
