--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,6 +2,10 @@ Release Notes
 =============
 ==== post Jena 2.5.5
 
+ReasonerFactoryAssembler
+    o Now takes note of ja:schema properties & binds such a schema
+      to the reasoners that the factory produces.
+
 Typed literals:
     o Fixed bug in retrieval of decimal values with trailing fractional
       zeros by canonicalizing values after parsing and improving
