git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119716 13f79535-47bb-0310-9956-ffa450edef68

--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,7 @@
 ==== ARQ ToDo
 
+** Quads and the quad engine - better as a dynamic transform? See dev.Quadization
+
 ** Paths 
 
 + {0} to be an assignment? 
