(Minor) Added Store#isClosed to track whether close has been called. Must add some tests, but where?
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/SDB/trunk@1119740 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,8 @@ Documentation:
 
 ==== SDB v1.2
 
+Added Store#isClosed(). Does nothing except track whether you've called close().
+
 ==== SDB v1.1
 
 + SPARQL/Update support 
