git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1119783 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,7 +3,7 @@ ChangeLog for ARQ
 
 ==== ARQ 2.5
 
-
++ Fixed bug with path parsing when "a" (for rdf:type) is used in a property list (using ;) 
 
 ==== ARQ 2.4
 
