git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/SDB/trunk@1120094 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,7 @@ Documentation:
 
 ==== SDB v1.2
 
++ Must use ARQ 2.5 (changes to quad support in preparation for optimization and path support)
 + Fix to BulkLoader (MS SQL Server) to allow creating a second store over an JDBC so JDBC pooled conenctions work
 + Added Store#isClosed(). Does nothing currently except track whether you've called close().
 
