Fixes for MS SQL Server when used with case sensitive collation sets.  This now requires case sensitive table names (a change from SQL Server 2005).
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113561 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,6 +2,10 @@ Release Notes
 =============
 ==== post Jena 2.5.5
 
+Database layer:
+   o Compatibility fixes for PostgreSQL 8.3 (no schema changes)  
+   o Compatibility fixes for MS SQL Server 2008  (no schema changes)
+
 ReasonerFactoryAssembler
     o Now takes note of ja:schema properties & binds such a schema
       to the reasoners that the factory produces.
