--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,7 +4,7 @@ ChangeLog for ARQ
 ==== ARQ 2.5
 
 + Redesign of quad support. 
-  AlgebraGeeneratorQuad retired
+  AlgebraGeneratorQuad retired
   Use Algebra.toQuadForm(Op) to turn an algebra expression into quads.   
 
 + fn:string-join was misnamed - was actually renamed as fn:concat
