--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -18,6 +18,10 @@ ChangeLog for ARQ
 + Bug fix: LET expressions did not eliminate solutions when
     assigned a new, different value.
 
++ Internal renaming to make the class names better reflect their role
+  particularly not using the term "compile" for things now considered
+  to happen during query execution.  
+
 + Internal utilities updated for TDB
 
 + Signal start/end of updates using the graph-level events mechanism.
