git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1120251 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,11 @@ ChangeLog for ARQ
 
 ==== ARQ 2.6
 
++ Fix bug in SPARQL grammar (!) : expressions like "1+2*3" did not parse.  
+  This is a fix to the grammar as published by the working group.  
+   It does not invalidate or chnage any query that works - it makes some
+   illegal syntax work that should work.
+
 ==== ARQ 2.5
 
 + Redesign of quad support. 
