git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120353 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,10 @@ ChangeLog for TDB
 
 ==== 0.7.0
 
++ Named graph support
+  Native TDB support for RDF datasets, including a quads table.
+  Preliminary.
+
 ==== 0.6.0
 + Added optimizer (statistics based) 
 + (32 bit OS) Added a transaction handler that will cause cached changes
