git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1120431 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,6 +3,9 @@ ChangeLog for ARQ
 
 ==== ARQ 2.6
 
++ Added .close() to Dataset and GraphStore for those implementations that
+  need to make changes permanent or release system resources.  
+
 + Clean internal extensions points for TDB
 
 + Put misc support code in for TDB
