git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1120455 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,10 @@
 ChangeLog for ARQ
 =================
 
+
+==== ARQ 2.7
+
+
 ==== ARQ 2.6
 
 + Added .close() to Dataset and GraphStore for those implementations that
