--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -3,11 +3,13 @@ ChangeLog for TDB
 
 ==== 0.7.0
 
-+ Upgrade to slf4j 1.5.6 (2 jar names change)
-
 + Named graph support
   Native TDB support for RDF datasets, including a quads table.
   Preliminary.
+
++ Reification: Support for Reification style "standard" 
+
++ Upgrade to slf4j 1.5.6 (2 jar names change)
 
 ==== 0.6.0
 + Added optimizer (statistics based) 
