Improved reporting of type range validity checking to report culprit Triple.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113586 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -2,6 +2,11 @@ Release Notes
 =============
 ==== Jena 2.5.8
 
+Reasoners:
+   o Extended validity checking for OWL configurations to include 
+     datatype range checking that can cope with user datatypes as done for RDFS.
+     Places the culprit Triple as the ValidityReport.Report extension value.
+     
 ==== Jena 2.5.7
 
 Database layer:
