--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,10 +8,10 @@ Documentation:
 
 ==== SDB v1.2
 
-+ Connection pooling support (add sdb:poolSize to a connection description)
-+ Must use ARQ 2.5 (changes to quad support in preparation for optimization and path support)
++ Must use ARQ 2.6 (changes to quad support in preparation for optimization and path support)
 + Fix to BulkLoader (MS SQL Server) to allow creating a second store over an JDBC so JDBC pooled conenctions work
 + Added Store#isClosed(). Does nothing currently except track whether you've called close().
++ Various bug fixes
 
 ==== SDB v1.1
 
