--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,12 +1,19 @@
 Release Notes
 =============
-==== Jena 2.5.8
+
+
+==== Jena 2.5.8/2.6.0
 
 Reasoners:
    o Extended validity checking for OWL configurations to include 
      datatype range checking that can cope with user datatypes as done for RDFS.
      Places the culprit Triple as the ValidityReport.Report extension value.
-     
+
+N3:
+   o N3 parser is now the Trutle parser.
+     The dialect of N3 that Jena supported (which is quite old) has some idioms that are not legal
+     Turtle although they are nowadays not correct N3 either.
+        
 ==== Jena 2.5.7
 
 Database layer:
