git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/ARQ/trunk@1120728 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -4,6 +4,8 @@ ChangeLog for ARQ
 
 ==== ARQ 2.7
 
++ Fix parsing of very large INSERT DATA requests (stack could overflow).
+
 + The IndexBuilder constructors taking a directory name as a string would 
   clear the Lucene index.  Changed so they do not do so - and behave like
   the other constructors which reuse an existing index.   
