git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120780 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -7,6 +7,11 @@ ChangeLog for TDB
 
 ==== 0.7.2
 
+Bug fixes:
+
+- The comand line tools did not work with a location and a named graph.
+
+- removeAll(s,p,o) added.  Improve Model.removeAll()
 
 ==== 0.7.1
 
