git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-SVN/TDB/trunk@1120800 13f79535-47bb-0310-9956-ffa450edef68

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,8 @@ Bug fixes:
 
 - removeAll(s,p,o) added.  Improve Model.removeAll()
 
+- Bug fixes to B+tree indexing on deletion. 
+
 ==== 0.7.1
 
 Bug fixes:
