Uncouple RDFRDBException from use in exceptions that are used outside the RDB code.
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/jena2/trunk@1113691 13f79535-47bb-0310-9956-ffa450edef68

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -6,6 +6,8 @@ Release Notes
 
 ** Codebase converted to Java 5
 
+   o Exceptions AlreadyExistsException, DoesNotExistException and RulesetNotFoundException no longer inherit via RDFRDBException 
+
 Jar changes:
    o Removed antlr-2.7.5.jar (no longer used)
    o Removed concurrent.jar (no longer used)
