*** empty log message ***
git-svn-id: https://svn.apache.org/repos/asf/incubator/jena/Import/Jena-CVS/iri/trunk@1108421 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE_NOTES.txt
+++ b/RELEASE_NOTES.txt
@@ -1,6 +1,9 @@
 
 Release Notes:
 
+iri-0.6:
+Convert to Java6
+
 iri-0.4: 
   fixed mailto scheme rules
   set file: to allow sameSchemeRelativeRefs in jenaImplementation
